2010-03-18  David Lonie  <loniedavid@gmail.com>

	* test/unitcell.cpp, test/files/unitcell.txt,
	test/files/unitcell_results.txt: Added coordinate transformations
	tests to unit cell tests.

2010-03-17  Geoffrey Hutchison  <babel@geoffhutchison.net>

	* src/forcefields/forcefielduff.cpp: Patch from Philipp Rumpf to
	fix 5-coordinate axial atom detection. Also fix PR#2971473 for
	planar SO3 molecules. Additional fixes to handle other hypervalent
	cases, including 7-coordinate pentagonal bipyramidal.

	* include/openbabel/atom.h: Explain new hybridization values
	(4 = sq. planar, 5 = trig. bipy, 6 = octahedral).

	* data/atomtype.txt: Add generic rules for hypervalent hybridizations.

	* src/atom.cpp (GetNewBondVector): Use OBBuilder as a
	replacement, to decrease duplicated code.

	* src/builder.cpp: Patch from Philipp to address hypervalent
	hybridizations. Also added code to assign random vectors for
	undefined cases -- this is better than using VZero, since at least
	atoms will have unique locations.

2010-03-15  Geoffrey Hutchison  <babel@geoffhutchison.net>

	* src/ops/unique.cpp: Fix #ifdefs to compile on GCC 4.0
	(i.e. without Boost or unordered_map support).

	* src/formats/gaussformat.cpp: Patch from Louis Ricard to improve
	support of reading Gaussian coordinates from geometry
	optimizations, etc.

	* src/formats/hinformat.cpp: Patch from George Tu through SF
	tracker to ignore HIN comment lines. PR#2969340.

2010-03-13  Noel O'Boyle

	* scripts/CMakeLists.txt, scripts/python/setup.py: Compile the
	SWIG bindings manually.

2010-03-12  Noel O'Boyle

	* CMakeLists.txt: Require BOOST for compilation with GCC3.x. Don't
	check for or use BOOST otherwise.

2010-03-11  Noel O'Boyle

	* src/ops/unique.cpp: Enable compilation with the help of Boost on
	GCC 3.4. Note to self, don't compile if Boost not found.

2010-03-10  Matt Sprague  <mesprague@gmail.com>

	* src/formats/xml/xml.cpp: Add call to xmlInitParser() to support